# PPreflection

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.sh  class_diagram.uxf  clean.sh  configure.sh  doxy_config  generate_metadata.sh  install.sh  metadata_backup  specifikacia.md
.github/workflows/: cmake.yml
PPreflection/: CMakeLists.txt  Namespace.h  Namespace.hpp  PPany_view.cpp  PPany_view.hpp  PPreflection.hpp  add_cv.h  add_function_cvrefn.h  add_ref.h  any_iterator.h  append_pack.h  apply_pack.h  args_to_types.hpp  array_ostream.h  array_ostream.hpp  array_vector.h  array_vector.hpp  basic_class_constructor.h  basic_class_constructor.hpp  basic_class_type.h  basic_class_type.hpp  basic_conversion_function.h  basic_function.h  basic_function.hpp  basic_fundamental_copy_constructor.h  basic_fundamental_default_constructor.h  basic_fundamental_type.h  basic_fundamental_type.hpp  basic_member_function.h  basic_member_function.hpp  basic_named_descriptor.h  basic_namespace.h  basic_namespace.hpp  basic_namespace_function.h  basic_namespace_function.hpp  basic_ostream.h  basic_ostream.hpp  basic_overloaded_class_constructor.h  basic_overloaded_constructor.h  basic_overloaded_constructor.hpp  (+176 more)
PPreflection/functions/: args_to_arg_types.hpp  constructor.h  constructor.hpp  conversion_function.h  conversion_function.hpp  converting_function.h  function.h  function.hpp  functions.h  functions.hpp  maybe_static_member_function.h  member_function.cpp  member_function.h  member_function.hpp  named_function.h  namespace_function.h  non_conversion_member_function.h  one_parameter_converting_constructor.h  one_parameter_converting_constructor.hpp  static_member_function.h
PPreflection/functions/implementations/: basic_class_constructor.h  basic_constructor.h  basic_conversion_function.h  basic_function.h  basic_member_function.h  basic_namespace_function.h  basic_non_conversion_member_function.h  basic_overloaded_class_constructor.h  basic_overloaded_constructor.h  basic_overloaded_conversion_function.h  basic_overloaded_function.h  basic_overloaded_member_function.h  basic_overloaded_named_function.h  basic_overloaded_namespace_function.h  basic_overloaded_non_conversion_member_function.h  basic_overloaded_static_member_function.h  basic_static_function.h  basic_static_member_function.h  basic_typed_function.h  implementations.h  implementations.hpp
PPreflection/types/: arithmetic_type.h  arithmetic_type.hpp  arithmetic_type_strong.h  arithmetic_type_strong.hpp  array_type.h  array_type.hpp  array_type_reference.h  class_type.h  class_type.hpp  complete_object_type.h  cv_qualifiable_type.h  cv_qualifiable_type_reference.h  cv_type.h  cv_type.hpp  derived_from.h  derived_from.hpp  dynamic_array_type.h  dynamic_cv_qualifiable_type.h  dynamic_enum_type.h  dynamic_function_type.h  dynamic_known_bound_array_type.h  dynamic_lvalue_reference_type.h  dynamic_named_descriptor.h  dynamic_non_array_object_type.h  dynamic_pointer_type.h  dynamic_reference_type.h  dynamic_rvalue_reference_type.h  dynamic_specific_reference_type_base.h  dynamic_unknown_bound_array_type.h  dynamic_user_defined_type.h  enum_type.h  enum_type.hpp  function_type.h  function_type.hpp  integral_type.h  known_bound_array_type.cpp  known_bound_array_type.h  known_bound_array_type.hpp  make_equal_operator_visitor.h  make_numeric_conversion.hpp  (+41 more)
PPreflection/types/implementations/: basic_array_type.hpp  basic_class_type.hpp  basic_complete_object_type.hpp  basic_cv_qualifiable_type.hpp  basic_enum_type.hpp  basic_function_type.hpp  basic_known_bound_array_type.hpp  basic_named_type.hpp  basic_non_array_object_type.hpp  basic_non_member_function_type.hpp  basic_non_union_class_type.hpp  basic_non_void_fundamental_type.hpp  basic_object_type.hpp  basic_pointable_type.hpp  basic_pointer_base_type.hpp  basic_pointer_to_member_type.hpp  basic_pointer_type.hpp  basic_referencable_type.hpp  basic_reference_type.hpp  basic_type.hpp  basic_union_type.hpp  basic_unknown_bound_array_type.h  basic_unknown_bound_array_type.hpp  basic_user_defined_type.hpp  basic_void_type.hpp  implementations.hpp
PPreflectiondemo/: C.cpp  C.hpp  CMakeLists.txt  E.hpp  S.hpp  animals.cpp  animals.hpp  f.cpp  f.hpp  main.cpp  metadata_backup  reactions.cpp  reactions.hpp  testik.cpp  testik.hpp  testik_reflection.cpp  visitor.cpp  visitor.hpp  visitor_reference.cpp  visitor_reference.hpp  visitor_reflection.cpp  visitor_reflection.hpp
PPreflector/: CMakeLists.txt  Class.cpp  Class.hpp  Enum.cpp  Enum.hpp  Namespace.cpp  Namespace.h  Namespace.hpp  action.cpp  action.hpp  base_class.cpp  base_class.hpp  constructor.cpp  constructor.hpp  consumer.cpp  consumer.hpp  conversion_function.cpp  conversion_function.hpp  default_constructor.cpp  default_constructor.hpp  descriptor.cpp  descriptor.hpp  enum_value.cpp  enum_value.hpp  for_each_with_delimiters.hpp  function.hpp  global_namespace.cpp  global_namespace.hpp  main.cpp  member_function.cpp  member_function.hpp  namespace_function.cpp  namespace_function.hpp  nested_descriptor.hpp  node_descriptor.hpp  non_conversion_member_function.cpp  non_conversion_member_function.hpp  non_global_namespace.cpp  non_global_namespace.h  non_global_namespace.hpp  (+12 more)
TestProject/: CMakeLists.txt  decls.hpp  impls.cpp  main.cpp  ref.hpp
TestProject/reflection/: reflection.hpp
